update to be more eloquent. next/prev buttons initially hidden

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img id='loader' src='img/ajax-loader.gif'  />
         <a id='play' href='#' data-icon="➲" class='button green glass round' style='display:none'>Play</a>
         <a id='pause' href='#' data-icon="||" class='button glass' style='display:none'>Pause</a><br>
-          <a id='prev' href='#' data-icon="< " class='blue button glass brackets'>Prev</a>
-        <a id='next' href='#' data-icon="> " class='blue button glass brackets'>Next</a>
+          <a id='prev' href='#' data-icon="< " class='blue button glass brackets' style='display:none'>Prev</a>
+        <a id='next' href='#' data-icon="> " class='blue button glass brackets' style='display:none'>Next</a>
         <div id='data' style='display:none'>
             <span id='title'></span><br>
             <span id='artist'></span>
